--- a/table.html
+++ b/table.html
@@ -150,27 +150,27 @@
               <div class="inputField">
                 <div>
                   <label for="name">Name:</label>
-                  <input type="text" name="" id="name" />
+                  <input type="text" name="" id="name" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="age">Age:</label>
-                  <input type="number" name="" id="age" />
+                  <input type="number" name="" id="age" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="city">City:</label>
-                  <input type="text" name="" id="city" />
+                  <input type="text" name="" id="city" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="email">Email:</label>
-                  <input type="email" name="" id="email" />
+                  <input type="email" name="" id="email" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="phone">Number:</label>
-                  <input type="text" name="" id="phone" minlength="11" maxlength="12" />
+                  <input type="text" name="" id="phone" minlength="11" maxlength="12" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="post">Post:</label>
-                  <input type="text" name="" id="post" />
+                  <input type="text" name="" id="post" autocomplete="off"/>
                 </div>
                 <div>
                   <label for="sDate">Start Date:</label>
