--- a/table.html
+++ b/table.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/table.css" />
 
-    <title>crud oper</title>
+    <title>Team</title>
     <!-- <link rel="stylesheet" href="./css/table.css" /> -->
   </head>
   <body>
