--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
           <li>
             <i class="bx bxs-calendar-check"></i>
             <span class="text">
-              <h3>1020</h3>
-              <p>New Order</p>
+              <h3>84</h3>
+              <p>Orderan Baru</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-group"></i>
             <span class="text">
               <h3>2834</h3>
-              <p>Visitors</p>
+              <p>Pengunjung</p>
             </span>
           </li>
           <li>
             <i class="bx bxs-dollar-circle"></i>
             <span class="text">
-              <h3>$2543</h3>
-              <p>Total Sales</p>
+              <h3>Rp.5.000.000</h3>
+              <p>Total</p>
             </span>
           </li>
         </ul>
